change app name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "TVC 3D Product",
+  "name": "The Vending Depot 3D products demo",
   "icons": [
     {
       "src": "favicon.ico",
